--- a/src/templates/aws-genomics-s3.template.yaml
+++ b/src/templates/aws-genomics-s3.template.yaml
@@ -18,7 +18,7 @@ Parameters:
     Type: String
     Description: >-
       A S3 bucket name for storing analysis results.
-      The bucket name must respect the S3 bucket naming conventions 
+      The bucket name must respect the S3 bucket naming conventions
       (can contain lowercase letters, numbers, periods and hyphens).
       If left blank a unique bucket name will be generated.
     AllowedPattern: "((?=^.{3,63}$)(?!^(\\d+\\.)+\\d+$)(^(([a-z0-9]|[a-z0-9][a-z0-9\\-]*[a-z0-9])\\.)*([a-z0-9]|[a-z0-9][a-z0-9\\-]*[a-z0-9])$)|(^.{0}$))"
@@ -51,10 +51,10 @@ Resources:
       BucketName:
         Fn::If:
           - GenerateBucketName
-          - Fn::Join: 
+          - Fn::Join:
             - "-"
             - - "genomics-workflows"
-              - !Select [ 2, !Split [ "/", !Ref "AWS::StackId" ]]
+              - !Select [0, !Split[-, !Select [2, !Split [/, !Ref AWS::StackId ]]]]
           - !Ref S3BucketName
       BucketEncryption:
         ServerSideEncryptionConfiguration:
